--- a/TensionGraph/TensionGraph.uplugin
+++ b/TensionGraph/TensionGraph.uplugin
@@ -9,7 +9,7 @@
 	"CreatedBy": "Joseph Chittock",
 	"CreatedByURL": "https://github.com/JChittockDev",
 	"DocsURL": "https://github.com/JChittockDev/Research/tree/main/TensionGraph",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/706af7025fdb49f58f9cc75ac7108321",
 	"SupportURL": "https://github.com/JChittockDev/Research/tree/main/TensionGraph",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
