Updated to be alot more modular
Moved different parts of the engine into more appropriate environments.

--- a/OpenResearchEngine/OpenResearchEngine.vcxproj
+++ b/OpenResearchEngine/OpenResearchEngine.vcxproj
@@ -142,35 +142,65 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Common\Camera.cpp" />
-    <ClCompile Include="Common\d3dApp.cpp" />
-    <ClCompile Include="Common\d3dUtil.cpp" />
-    <ClCompile Include="Common\DDSTextureLoader.cpp" />
-    <ClCompile Include="Common\GameTimer.cpp" />
-    <ClCompile Include="Common\GeometryGenerator.cpp" />
-    <ClCompile Include="Common\MathHelper.cpp" />
-    <ClCompile Include="FrameResource.cpp" />
-    <ClCompile Include="LoadM3d.cpp" />
-    <ClCompile Include="ShadowMap.cpp" />
-    <ClCompile Include="SkinnedData.cpp" />
-    <ClCompile Include="SkinnedMeshApp.cpp" />
-    <ClCompile Include="Ssao.cpp" />
+    <ClCompile Include="Build\BuildDescriptorHeaps.cpp" />
+    <ClCompile Include="Build\BuildFrameResources.cpp" />
+    <ClCompile Include="Build\BuildMaterials.cpp" />
+    <ClCompile Include="Build\BuildPso.cpp" />
+    <ClCompile Include="Build\BuildRenderItems.cpp" />
+    <ClCompile Include="Build\BuildRootSignature.cpp" />
+    <ClCompile Include="Build\BuildShaders.cpp" />
+    <ClCompile Include="Build\BuildSSAORootSignature.cpp" />
+    <ClCompile Include="Build\BuildTextures.cpp" />
+    <ClCompile Include="Objects\Camera.cpp" />
+    <ClCompile Include="D3D12\D3DApp.cpp" />
+    <ClCompile Include="D3D12\D3DUtil.cpp" />
+    <ClCompile Include="Models\External\DDSTextureLoader.cpp" />
+    <ClCompile Include="Utilities\GameTimer.cpp" />
+    <ClCompile Include="Models\Internal\GeometryGenerator.cpp" />
+    <ClCompile Include="Common\Math.cpp" />
+    <ClCompile Include="Draw\DrawShadowMap.cpp" />
+    <ClCompile Include="Draw\DrawNormalsDepth.cpp" />
+    <ClCompile Include="Draw\DrawRenderItems.cpp" />
+    <ClCompile Include="Controls\Controls.cpp" />
+    <ClCompile Include="Render\Resources\FrameResource.cpp" />
+    <ClCompile Include="Build\BuildGenericGeometry.cpp" />
+    <ClCompile Include="Models\External\LoadM3d.cpp" />
+    <ClCompile Include="Build\BuildMesh.cpp" />
+    <ClCompile Include="Objects\StaticMesh.cpp" />
+    <ClCompile Include="Render\Passes\ShadowMap.cpp" />
+    <ClCompile Include="Render\Resources\SkinnedData.cpp" />
+    <ClCompile Include="EngineApp.cpp" />
+    <ClCompile Include="Objects\SkinnedMesh.cpp" />
+    <ClCompile Include="Render\Passes\Ssao.cpp" />
+    <ClCompile Include="Render\Resources\StaticSamplers.cpp" />
+    <ClCompile Include="Update\UpdateMainPass.cpp" />
+    <ClCompile Include="Update\UpdateMaterialBuffers.cpp" />
+    <ClCompile Include="Update\UpdateRenderItems.cpp" />
+    <ClCompile Include="Update\UpdateShadowPass.cpp" />
+    <ClCompile Include="Update\UpdateSkinnedMesh.cpp" />
+    <ClCompile Include="Update\UpdateSSAO.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Common\Camera.h" />
-    <ClInclude Include="Common\d3dApp.h" />
-    <ClInclude Include="Common\d3dUtil.h" />
-    <ClInclude Include="Common\d3dx12.h" />
-    <ClInclude Include="Common\DDSTextureLoader.h" />
-    <ClInclude Include="Common\GameTimer.h" />
-    <ClInclude Include="Common\GeometryGenerator.h" />
-    <ClInclude Include="Common\MathHelper.h" />
+    <ClInclude Include="Objects\Camera.h" />
+    <ClInclude Include="D3D12\D3DApp.h" />
+    <ClInclude Include="D3D12\D3DUtil.h" />
+    <ClInclude Include="D3D12\D3Dx12.h" />
+    <ClInclude Include="Models\External\DDSTextureLoader.h" />
+    <ClInclude Include="Utilities\GameTimer.h" />
+    <ClInclude Include="Models\Internal\GeometryGenerator.h" />
+    <ClInclude Include="Common\Math.h" />
+    <ClInclude Include="Common\Structures.h" />
     <ClInclude Include="Common\UploadBuffer.h" />
-    <ClInclude Include="FrameResource.h" />
-    <ClInclude Include="LoadM3d.h" />
-    <ClInclude Include="ShadowMap.h" />
-    <ClInclude Include="SkinnedData.h" />
-    <ClInclude Include="Ssao.h" />
+    <ClInclude Include="EngineApp.h" />
+    <ClInclude Include="Render\Resources\FrameResource.h" />
+    <ClInclude Include="Models\External\LoadM3d.h" />
+    <ClInclude Include="Objects\Object.h" />
+    <ClInclude Include="Render\Resources\RenderItem.h" />
+    <ClInclude Include="Render\Resources\SkinnedModelInstance.h" />
+    <ClInclude Include="Objects\StaticMesh.h" />
+    <ClInclude Include="Render\Passes\ShadowMap.h" />
+    <ClInclude Include="Render\Resources\SkinnedData.h" />
+    <ClInclude Include="Render\Passes\Ssao.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
