--- a/OpenResearchEngine/OpenResearchEngine.vcxproj
+++ b/OpenResearchEngine/OpenResearchEngine.vcxproj
@@ -91,7 +91,7 @@
     <ClCompile Include="Build\BuildMaterials.cpp" />
     <ClCompile Include="Build\BuildMesh.cpp" />
     <ClCompile Include="Build\BuildPso.cpp" />
-    <ClCompile Include="Build\BuildRenderItems.cpp" />
+    <ClCompile Include="Build\BuildLevel.cpp" />
     <ClCompile Include="Build\BuildRootSignature.cpp" />
     <ClCompile Include="Build\BuildShaders.cpp" />
     <ClCompile Include="Build\BuildSSAORootSignature.cpp" />
