--- a/OpenResearchEngine/OpenResearchEngine.vcxproj.filters
+++ b/OpenResearchEngine/OpenResearchEngine.vcxproj.filters
@@ -141,6 +141,12 @@
     <ClCompile Include="Build\BuildLights.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Update\UpdateShadowPass2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Draw\DrawShadowMap2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Objects\Camera.h">
