--- a/OpenResearchEngine/OpenResearchEngine.vcxproj
+++ b/OpenResearchEngine/OpenResearchEngine.vcxproj
@@ -93,11 +93,11 @@
     <ClCompile Include="Build\BuildMesh.cpp" />
     <ClCompile Include="Build\BuildPso.cpp" />
     <ClCompile Include="Build\BuildLevel.cpp" />
+    <ClCompile Include="Build\BuildRenderPasses.cpp" />
     <ClCompile Include="Build\BuildRootSignature.cpp" />
     <ClCompile Include="Build\BuildShaders.cpp" />
     <ClCompile Include="Build\BuildSSAORootSignature.cpp" />
     <ClCompile Include="Build\BuildTextures.cpp" />
-    <ClCompile Include="Draw\DrawShadowMap2.cpp" />
     <ClCompile Include="Objects\Camera.cpp" />
     <ClCompile Include="D3D12\D3DApp.cpp" />
     <ClCompile Include="D3D12\D3DUtil.cpp" />
@@ -108,7 +108,6 @@
     <ClCompile Include="Shaders\Compiler\ShaderCompiler.cpp" />
     <ClCompile Include="Update\UpdateLights.cpp" />
     <ClCompile Include="Update\UpdateRenderAssets.cpp" />
-    <ClCompile Include="Update\UpdateShadowPass2.cpp" />
     <ClCompile Include="Update\UpdateSkinnedMesh.cpp" />
     <ClCompile Include="Utilities\GameTimer.cpp" />
     <ClCompile Include="Models\Internal\GeometryGenerator.cpp" />
